--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,39 @@
 *{ padding:; margin:0; }
-.container{
-  margin-top: 2em;
+
+html, body {
+  height: 100%;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+header {
+  text-align: center;
+  padding: 2em;
+  flex: 0;
+}
+
+.cell-container{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .status {
   margin: 2px;
   font-family: monospace;
   text-align: center;
+  flex: 0;
+}
+
+.keyboard-container {
+  flex: 0;
+  padding-top: 2em;
+  touch-action: none;
 }
 .guess {
   display: flex;
@@ -17,7 +44,7 @@
   padding: 2px 8px;
   margin: 2px;
   font-family: monospace;
-  font-size: 24px;
+  font-size: 26px;
   text-transform: uppercase;
 }
 [data-state="blank"] {
@@ -53,7 +80,18 @@
 
 .kbrow button {
   border: none;
-  padding: .8em;
-  margin: .2em;
+  padding: .4em;
+  margin: .17em;
   text-transform: uppercase;
+  color: black;
+  font-size: 16px !important;
+}
+
+button, select {
+  color: black;
+}
+
+.kbrow button[data-state] {
+  color: white;
+  font-weight: bold;
 }
