--- a/src/style.css
+++ b/src/style.css
@@ -8,10 +8,11 @@ html, body {
   display: flex;
   flex-direction: column;
   height: 100%;
+  font-family: monospace;
+  text-align: center;
 }
 
 header {
-  text-align: center;
   padding: 2em;
   flex: 0;
 }
@@ -25,12 +26,12 @@ header {
 
 .status {
   margin: 2px;
-  font-family: monospace;
-  text-align: center;
+  font-size: 24px;
+  text-transform: uppercase;
   flex: 0;
 }
 
-.keyboard-container {
+footer {
   flex: 0;
   padding-top: 2em;
   touch-action: none;
@@ -43,7 +44,6 @@ header {
   border: 2px solid black;
   padding: 2px 8px;
   margin: 2px;
-  font-family: monospace;
   font-size: 26px;
   text-transform: uppercase;
 }
@@ -94,4 +94,12 @@ button, select {
 .kbrow button[data-state] {
   color: white;
   font-weight: bold;
+}
+
+.about {
+  padding: 1em;
+}
+.about>a, .about>a:visited {
+  font-size: 12px;
+  color: #444;
 }
